package wiki.hf.domain;

public enum ChangeType
{
    CREATE,
    EDIT,
    DELETE
}
