package wiki.hf.domain;

public class Content {
}
