package wiki.hf.domain;

public enum ItemType
{
    PARAGRAPH,
    LIST,
    IMAGE,
    VIDEO
}
