package wiki.hf.domain;

public class Metadata {
}
