package wiki.hf.domain;

public enum Role
{
    USER,
    EDITOR,
    ADMIN,
    OWNER
}
